test/errors/ILL-02.tec
! TECO test: Test illegal command !
! Commands: ^] !
! Requirements: None !
! Execution: Standard !
! Expect: ?ILL !
 
                                      ! Test: ^] command !
